--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,3 @@
+/*Lägg till ett reset!*/ 
+
 body{background-color:aqua}header{display:flex;justify-content:space-between;background-color:#fff}header h1{margin:0}@media screen and (min-width: 1280px){body{background-color:#ff0}main{border:2px solid green;display:grid;grid-template-columns:repeat(12, 1fr);gap:16px}header{flex-direction:column}.page1{grid-column:span 11;min-height:100vh}.page1 .top,.page1 .bottom{display:grid;gap:16px;grid-template-columns:repeat(11, 1fr)}.page1 .top .page-title{grid-column:span 4}.page1 .top .text{grid-column:span 7}.page1 .bottom .image{grid-column:span 5}.page1 .bottom .text{grid-column:span 6}}
