--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -2,12 +2,28 @@ body {
     background-color: aqua;
   }
   
-  header {
-    display: flex;
-    justify-content: space-between;
-    background-color: white; /*Göra om till variabler senare*/
-  
-    h1{
-      margin: 0;
-    }
+button {
+  width: 35px;
+  height: 35px;
+  background: transparent;
+  border: 0;
+
+  span {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    border-radius: 6px;
+    margin-bottom: 4px;
   }
+}
+
+header {
+  display: flex;
+   justify-content: space-between;
+   background-color: white; /*Göra om till variabler senare*/
+  
+   h1{
+     margin: 0;
+   }
+}
