--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -18,6 +18,24 @@ button {
   }
 }
 
+input:checked {
+  + button {
+    span {
+      position: absolute;
+      transition: all 0.3s ease-in-out;
+    }
+    span:nth-child(2) {
+      opacity: 0;
+    }
+    span:nth-child(1) {
+      transform: rotate(45deg);
+    }
+    span:nth-child(3) {
+      transform: rotate(-45deg);
+    }
+  }
+}
+
 header {
   display: flex;
    justify-content: space-between;
