--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -36,6 +36,24 @@ input:checked {
   }
 }
 
+nav.menu {
+  position: fixed;
+  background-color: rgba(234, 230, 127, 0.5);
+  width: 100vw;
+  height: 100vh;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+  text-align: center;
+}
+
 header {
   display: flex;
    justify-content: space-between;
