--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -21,7 +21,7 @@ button {
     display: block;
     width: 25px;
     height: 3px;
-    background-color: black;
+    background-color: rgb(255, 242, 54); /*Enligt brief*/
     border-radius: 6px;
     margin-bottom: 4px;
   }
@@ -91,11 +91,13 @@ ul {
 header {
   display: flex;
    justify-content: space-between;
-   background-color: rgb(255, 255, 255); /*Göra om till variabler senare*/
+   background-color: rgb(0, 0, 0); /*Göra om till variabler senare*/
   
    h1{
      margin: 0;
+     padding: 10px 45px;
      text-transform:uppercase;
+     color: rgb(255, 255, 255);
    }
 }
 
