--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,7 @@
+@function rem($size) {
+  @return calc($size / 16) * 1rem;
+}
+
 @import 'mobile';
  
 p {
@@ -16,7 +20,6 @@ p {
 /*.only-desktop {
   display: none;
 }*/ 
-
 /*Tablet - OBS EJ "hugget i sten" bryt när det känns rätt*/
 @media screen and (min-width:768px) { 
   @import 'tablet';
