--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -127,3 +127,21 @@ h2 {
   }
   
 }
+
+p {
+  font-size: 1.25rem;
+}
+
+.bottom {
+  text-align: center;
+  
+    a {
+      font-size: 1.25rem;
+      font-family: 'Jockey One';
+      color: rgb(0, 0, 0);
+      text-transform: uppercase;
+      text-decoration: none;
+  
+    }
+
+}
