added menu items

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -163,3 +163,20 @@ p {
   }
 
 }
+
+.menu-items {
+  
+  text-align: center;
+
+  .about {
+    font-size: 1rem;
+  }
+
+  .price {
+    display: block;
+    margin-bottom: 10px;
+  }
+}
+
+
+
