--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -211,7 +211,7 @@ p {
   }
 
   .about {
-    font-family: 'Roboto Condensed';
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.45rem;
   }
 
@@ -222,6 +222,20 @@ p {
     margin-bottom: 20px;
   }
 }
+
+// .page3 {
+
+//   h4 {
+//     font-size: 3rem; /*Justera*/
+//   }
+//   form {
+//     font-family: 'Jockey One';
+
+//     .form-input {
+//       border: 1px solid red;
+//     }
+//   }
+ 
 
 
 
