--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -130,6 +130,11 @@ h2 {
 
 p {
   font-size: 1.25rem;
+  .text {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 .bottom {
