--- a/css/style.scss
+++ b/css/style.scss
@@ -7,9 +7,9 @@
 
 .text {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  text-align: center;
+  // display: flex;
+  // justify-content: center;
+  // text-align: center;
   max-width: 60ch;
   font-family: 'Jockey One';
   font-size: rem (16);
