--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -155,7 +155,7 @@ p {
   display: flex;
   justify-content: center;
   margin: 10px;
-  .p2 {
+  .p2-1, .p2 {
    
     width: 30%;
     height: auto;
