--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -99,17 +99,19 @@ ul {
 
 header {
   display: flex;
-   justify-content: space-between;
+  width: 85px;
+   /*justify-content: space-between;*/
    background-color: rgb(0, 0, 0); /*Göra om till variabler senare*/
   
    h1{
-     margin: 0;
-     padding: 10px 45px;
+     /*margin: 0;*/
+     margin-top: 5px;
+     /*padding: 10px 45px;*/ /*Innan demo*/
      text-transform:uppercase;
      color: rgb(255, 255, 255);
-     font-size: clamp(1rem, 8vw, 4rem);
+     font-size: clamp(1rem, 8vw, 2.5rem);
      font-family: 'Jockey One';
-
+     
    }
 }
 
