--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -99,9 +99,10 @@ ul {
 
 header {
   display: flex;
-  width: 85px;
-   /*justify-content: space-between;*/
-   background-color: rgb(0, 0, 0); /*Göra om till variabler senare*/
+  width: 100vw;
+  
+   justify-content: center;
+  background-color: rgb(0, 0, 0); /*Göra om till variabler senare*/
   
    h1{
      /*margin: 0;*/
