--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -262,4 +262,18 @@ p {
 }
 
 
+.cookies {
+  background-color: #ac77ff;
+  position: fixed;
+  z-index: 5;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 8px;
+  padding-block: 16px;
+
+
+}
 
