--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -75,20 +75,28 @@ h1 {
             background-position: center center;
             position: relative;
 
+            
+
             &:hover {
                 .arrow {
                     bottom: 16px; /*åka upp/ner??*/
                 }
             }
         }
+    
 
     .arrow {
+        
         transform: rotate(90deg);
         position: absolute;
         bottom: 10px;
         left: 8px;
         transition: bottom 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            
+
     }
+    
+    
 
         .text {
             grid-column: span 6;
@@ -110,11 +118,19 @@ h1 {
 
     .page2-images {
         grid-column: 2 / -1;
+        grid-row: 1;
         display: grid; 
         grid-template-columns: repeat(11, 1fr);
         width: auto; 
 
-/*object fit & cover*/
+       
+
+        .p2-1, .p2-middle, .p2 {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+
         .p2-1 {
             grid-column: span 3;
             width: 100%;
@@ -129,9 +145,10 @@ h1 {
         }
     }
 
-    article { /*.menu-items istället?*/
+    .menu-items { /*.menu-items istället?*/
         text-align: left; /*För att "bryta centrering*/
         grid-column: 2 / -1;
+        grid-row: 2;
         display: grid;
         grid-template-columns: repeat(11, 1fr);
         .tags {
