--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -132,6 +132,7 @@ h2 {
   
 }
 
+
 p {
   font-size: 1.25rem;
   .text {
@@ -181,18 +182,19 @@ p {
     font-size: 2rem;
     display: inline-block;
     margin: auto 5px;
-    // display: flex;
-    // align-items: center;
-    // gap: 1px;
+
   }
 
   .tag {
     display: inline-block;
     transform: rotate(-3deg);
+    z-index: -5; /*OBS funkar ej?*/
+    
 
     span {
       font-family: 'Courier Prime';
       text-transform: uppercase;
+      
     }
 
       .new {
