lettuce + arrow done

--- a/css/style.scss
+++ b/css/style.scss
@@ -28,14 +28,13 @@ jag ändå använder rem ??*/
 @media screen and (min-width:768px) { 
   @import 'tablet';
 }
+.desktop-only {
+  display: none;
 
-// .desktop-only {
-//   display: none;
-
-//   @media (min-width: 1280;) {
-//     display: block;
-//   }
-// }
+  @media (min-width: 1280px) {
+    display: block;
+  }
+}
 
 /*Desktop - 1280px eller 1366?*/
 @media screen and (min-width:1280px) {
@@ -50,7 +49,7 @@ jag ändå använder rem ??*/
   }
 
   .page1-img {
-    display: block;
+    /*display: block;*/
 
     img {
       max-width: 100%;
