--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -153,7 +153,6 @@ p {
       text-decoration: none;
   
     }
-
 }
 
 .page2-images {
@@ -188,7 +187,7 @@ p {
   .tag {
     display: inline-block;
     transform: rotate(-3deg);
-    z-index: -5; /*OBS funkar ej?*/
+    z-index: -5; /*OBS funkar ej? WHY?*/
     
 
     span {
