explore menu + menu items

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,9 +8,9 @@ jag ändå använder rem ??*/
 }
 
 /*Mina variabler*/
-$primary-color: #fff236 
-$secondary-color:#00ff37
-$third-color: #aa75ff 
+$primary-color: #fff236;  
+$secondary-color:#00ff37; 
+$third-color: #aa75ff; 
 
 $primary-font: "Jockey One"; 
 $secondary-font: "Roboto Condensed"; 
@@ -27,7 +27,7 @@ $secondary-font: "Roboto Condensed";
   // text-align: center;
   max-width: 60ch;
   font-family: 'Jockey One';
-  font-size: rem (16);
+  font-size: 16px;
   margin: 0 auto;
 }
 
