--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -54,7 +54,8 @@ h1 {
     .top, .bottom {
         display: grid;
         gap: 16px;
-        grid-template-columns: repeat(11, 1fr);   
+        grid-template-columns: repeat(11, 1fr);  
+        grid-template-rows: auto auto;
     }
 
    .top {
@@ -68,6 +69,7 @@ h1 {
    } 
 
    .bottom {
+        
         .page1-img {
             grid-column: span 5;
             background-image: url('../assets/img/lettuce.jpg');
@@ -89,18 +91,35 @@ h1 {
         left: 8px;
         transition: bottom 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
+
+    .text, .menu-link {
+        background-color: white;
+    }
     
         .text {
             grid-column: span 6;
-            border-left: 10px solid red;
+            border-left: 10px solid $primary-color;
             padding-left: 10px;
             font-size: 3.4rem;
+            margin: 0; /*?*/
         }
+    .menu-link {
+        grid-column: 6 / span 6;
+        display: block;
+        
+        padding-left: 20px;
+        margin-top: 0;
+
+        img {
+            margin-left: 5px;
+        }
+    }
+    
    } 
 }
 // /* Lägg till grid för page 2*/
 
-.page2 { /*Behövs 113-116?/Jenni*/
+.page2 { 
     min-height: 100vh;
     grid-column: span 10;
     grid-template-columns: repeat(11, 1fr);
@@ -136,25 +155,62 @@ h1 {
         }
     }
 
-    .menu-items { /*.menu-items istället?*/
-        text-align: left; /*För att "bryta centrering*/
-        grid-column: 2 / -1;
-        grid-row: 2;
+    .test {
         display: grid;
+        grid-column: 2 / -1 ;
+        grid-row: 2;
         grid-template-columns: repeat(11, 1fr);
+        text-align: left;
+    
+
+        background-color: white;
+        border-top: 1px solid red;
+        border-bottom: 1px solid red;
+        margin: 10px 0;
+
+        .name {
+            grid-column: 1 / 4;
+        }
+        .tags {
+            grid-column: 1 / 4;
+        }
+        .about {
+            grid-column: 5 / 11;
+        }
+        .price {
+            grid-column: 11 / 12;
+        }
+
+
+    }
+
+
+    /*BEFORE*/ /*
+    .menu-items { 
+        -text-align: left; För att "bryta centrering
+        -grid-column: 2 / -1;
+        -grid-row: 2;
+        -display: grid;
+        -grid-template-columns: repeat(11, 1fr);
+        border-top: 1px solid red;
+
+        .tags, .about, .price {
+            border-bottom: 1px solid red;
+            background-color: white;
+        }
         .tags {
             grid-column: 1 / 4;
         }
         .name {
-            grid-column: 1 / 4; /*Innan: 2/span 4*/ 
+            grid-column: 1 / 4;  
         }
         .about {
-            grid-column: 5 / 11; /*Innan: span 6*/ 
+            grid-column: 5 / 11;  
         }
         .price {
             grid-column: 11/ 12;
         }
-    }
+    }BEFORE END*/ 
 }
 
 .page3 {
