--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -130,7 +130,6 @@ h2 {
     max-width: 70%;
     height: auto;
   }
-  
 }
 
 
@@ -144,7 +143,8 @@ p {
 }
 
 .bottom {
-  text-align: center;
+  
+  /*text-align: center;*/ /*Behövs ej?*/
   
     a {
       font-size: 1.25rem;
@@ -152,8 +152,9 @@ p {
       color: rgb(0, 0, 0);
       text-transform: uppercase;
       text-decoration: none;
-  
+      
     }
+    
 }
 
 .page2-images {
