--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -143,18 +143,14 @@ p {
 }
 
 .bottom {
-  
-  /*text-align: center;*/ /*Behövs ej?*/
-  
+  text-align: center;
     a {
       font-size: 1.25rem;
       font-family: 'Jockey One';
       color: rgb(0, 0, 0);
       text-transform: uppercase;
       text-decoration: none;
-      
     }
-    
 }
 
 .page2-images {
