added tahini drizzle chickpeas

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -117,8 +117,44 @@ header {
    }
 }
 
-h2 {
-  font-family: 'Roboto Condensed';
+.page-title {
+  font-family: $primary-font, sans-serif;
+  text-transform: uppercase;
+  position: relative;
+  min-width: 300px;
+  min-height: 300px;
+
+  div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .drizzle, .chickpeas {
+    position: absolute;
+  }
+
+  .drizzle {
+    color: $third-color;
+    top: -6px;
+    right: 0;
+    font-size: 1.57rem;
+  }
+
+  .tahini {
+    color: $secondary-color;
+    font-size: 4rem;
+  }
+
+  .chickpeas {
+    color: $primary-color;
+    left: 0;
+    bottom: -8px;
+    font-size: 1.75rem;
+    z-index: -1;
+
+  }
 }
 
 
