adjusted z-index. removed photos & text

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@ $secondary-font: "Roboto Condensed";
   }
 }
 
+
 /*Desktop - 1280px eller 1366?*/
 @media screen and (min-width:1280px) {
   @import 'desktop';
@@ -56,13 +57,14 @@ $secondary-font: "Roboto Condensed";
     width: auto;
   }
 
-  .page1-img {
-    /*display: block;*/
-    img {
-      max-width: 100%;
+  // .page1-img {
+  //   /*display: block;*/
+  //   .lettuce {
+  //     display: none;
+  //   }
       
-    }
-  }
+  //   }
+  // }
   
 }
 
