--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -74,10 +74,16 @@ h1 {
         
         .page1-img {
             grid-column: span 5;
-            background-image: url('../assets/img/lettuce.jpg');
-            background-size: cover;
+            /*background-image: url('../assets/img/lettuce.jpg');
+            background-size: cover;*/
             background-position: center center;
             position: relative;
+
+            img {
+                z-index: -50;
+            }
+
+        
 
             &:hover {
                 .arrow {
@@ -92,6 +98,7 @@ h1 {
         bottom: 10px;
         left: 8px;
         transition: bottom 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        z-index: -49;
     }
 
     .text, .menu-link {
