--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -6,7 +6,7 @@ header {
   height: 70px;
   border-bottom: 15px solid $primary-color;
 }
-  
+  /*Button här under*/
 button {
   width: 35px;
   height: 35px;
@@ -15,7 +15,7 @@ button {
   position: fixed;
   left: 20px; /*right efter video*/
   top: 20px;
-  z-index: 2; /*skulle även funka med 1 i detta fall*/
+  z-index: 5; /*skulle även funka med 1 i detta fall*/
   pointer-events: none; /*så ej registrerar några musklick*/
 
   span {
@@ -35,7 +35,7 @@ button {
   position: fixed;
   top: 20px;
   left: 20px;/*right*/
-  z-index: 1;
+  z-index: 4;
   width: 35px;
   height: 35px;
   opacity: 0;
@@ -67,7 +67,7 @@ input:checked {
 }
 
 
-nav {/*tog bort .menu*/
+nav {
   position: fixed;
   top: 0;
   left: 0;
@@ -102,8 +102,7 @@ ul {
 header {
   display: flex;
   width: 100vw;
-  
-   justify-content: center;
+  justify-content: center;
   background-color: rgb(0, 0, 0); /*Göra om till variabler senare*/
   
    h1{
@@ -124,6 +123,7 @@ header {
   position: relative;
   min-width: 300px;
   min-height: 300px;
+  z-index: -1;
 
   div {
     position: absolute;
@@ -227,7 +227,7 @@ p {
     color: black;
     display: inline-block;
     transform: rotate(-3deg);
-    z-index: -5; /*OBS funkar ej? WHY?*/
+    z-index: -5;
     
 
     span {
@@ -306,7 +306,7 @@ p {
 .cookies {
   background-color: #ac77ff;
   position: fixed;
-  z-index: 5;
+  z-index: 999; /*Överst?*/
   bottom: 0;
   width: 100%;
   display: flex;
