added design "explore menu"

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -120,6 +120,9 @@ h1 {
         padding-left: 20px;
         margin-top: 0;
 
+        color: black;
+        text-align: left;
+
         img {
             margin-left: 5px;
         }
