--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -175,7 +175,7 @@ h1 {
         grid-template-columns: repeat(11, 1fr);
         text-align: left;
     
-
+        color: black;
         background-color: white;
         border-top: 1px solid red;
         border-bottom: 1px solid red;
@@ -190,6 +190,7 @@ h1 {
         }
         .about {
             grid-column: 5 / 11;
+            color: black;
         }
         .price {
             grid-column: 11 / 12;
