--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -20,7 +20,7 @@ header {
     /*efter demo här under*/
     position: fixed; 
     height: 100vh;
-    width: 90px; 
+    width: 95px; 
     border-right: 15px solid $primary-color;
     border-bottom: 0;
 }
@@ -79,9 +79,13 @@ h1 {
             background-size: cover;*/
             background-position: center center;
             position: relative;
+            // height: 300px;
 
             img {
                 z-index: -50;
+                // object-fit: cover;
+                // width: 100%;
+                // height: 100%;
             }
 
         
@@ -111,7 +115,7 @@ h1 {
             grid-column: span 6;
             border-left: 10px solid $primary-color;
             padding-left: 10px;
-            font-size: 3.4rem;
+            font-size: 3.3rem;
             margin: 0; /*?*/
         }
     .menu-link {
@@ -153,7 +157,7 @@ h1 {
         .p2-1, .p2-middle, .p2 {
             object-fit: cover;
             width: 100%;
-            height: 300px;
+            height: 400px;
         }
 
         .p2-1 {
@@ -179,8 +183,8 @@ h1 {
     
         color: black;
         background-color: white;
-        border-top: 1px solid red;
-        border-bottom: 1px solid red;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
         margin: 10px 0;
 
         .name {
