validated CSS and deleted span1 header

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -5,6 +5,7 @@ body {
 header {
   height: 95px;
   border-bottom: 10px solid $primary-color;
+  position: fixed;
 }
   /*Button här under*/
 button {
