--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -13,7 +13,7 @@ header {
     flex-direction: column;
    /* Innan demo height: auto;*/
     display: grid;
-    grid-template-columns: span 1;
+   /* grid-template-columns: span 1;*/
     display: flex;
     align-items: center;
     justify-content: space-between;
