--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -280,6 +280,7 @@ p {
   font-family: $primary-font;
   text-transform: uppercase;
   color: white;
+  padding-left: 30px;
 
   .contact {
     h4 {
@@ -290,23 +291,34 @@ p {
       display: flex;
       flex-direction: column;
       font-size: 2rem;
+      // padding-left: 30px;
 
       label {
-        margin-bottom: 10px;
+        margin-bottom: 15px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        span {
+          flex: 1;
+          max-width: 150px;
+        }
       }
 
       input {
-        border-radius: 10px;
+        border-radius: 13px;
+        flex: 2;
       }
 
       .buttons {
+        margin: 10px 0;
         // background-color: #C347FF;
 
         .form-button {
           font-family: $primary-font;
           text-transform: uppercase;
           color: black;
-          padding: 0 25px;
+          padding: 0 45px;
         }
         .cancel-button {
           background-color: $third-color;
