lettuce img, desktop width

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -77,17 +77,17 @@ h1 {
             grid-column: span 5;
             /*background-image: url('../assets/img/lettuce.jpg');
             background-size: cover;*/
-            background-position: center center;
+            // background-position: center center;
             position: relative;
             // height: 300px;
 
             img {
                 z-index: -50;
+                max-width: 100%;
                 // object-fit: cover;
                 // width: 100%;
                 // height: 100%;
             }
-
             &:hover {
                 .arrow {
                     bottom: 16px; /*åka upp/ner??*/
